Done with the user interface layout

--- a/index.html
+++ b/index.html
@@ -29,6 +29,18 @@
             <h3>Sound Name</h3>
         </div>
     </div>
+
+    <div class="sounds">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
