--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="power">
             <h3>Power</h3>
             <label class="custom-toggle">
-                <input type="checkbox" />
+                <input class="customSwitch" type="checkbox" />
                 <span class="slider"></span>
             </label>
             
