--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         <div class="volume">
             <h3>volume</h3>
-            <input type="range" name="volume" id="volume">
+            <input type="range" name="volume" id="volume" min="0" max="100">
         </div>
         <div class="info-display">
             <i class="fa-solid fa-headphones-simple"></i>
