added code snippet

--- a/index.html
+++ b/index.html
@@ -26,20 +26,21 @@
         </div>
         <div class="info-display">
             <i class="fa-solid fa-headphones-simple"></i>
-            <h3>Sound Name</h3>
+            <h3 class="soundName">Sound Name</h3>
+            
         </div>
     </div>
 
     <div class="sounds">
-        <div class="beat"></div>
-        <div class="beat"></div>
-        <div class="beat"></div>
-        <div class="beat"></div>
-        <div class="beat"></div>
-        <div class="beat"></div>
-        <div class="beat"></div>
-        <div class="beat"></div>
-        <div class="beat"></div>
+        <div class="beat" id="snare"></div>
+        <div class="beat" id="hi-hat"></div>
+        <div class="beat" id="kick"></div>
+        <div class="beat" id="bass"></div>
+        <div class="beat" id="tom"></div>
+        <div class="beat" id="snap"></div>
+        <div class="beat" id="rimshot"></div>
+        <div class="beat" id="cymbal"></div>
+        <div class="beat" id="clap"></div>
     </div>
     <script src="app.js"></script>
 </body>
