done with the functionality for displaying the name of beat when clicked

--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
     </div>
 
     <div class="sounds">
-        <div class="beat" id="snare"></div>
-        <div class="beat" id="hi-hat"></div>
-        <div class="beat" id="kick"></div>
-        <div class="beat" id="bass"></div>
-        <div class="beat" id="tom"></div>
-        <div class="beat" id="snap"></div>
-        <div class="beat" id="rimshot"></div>
-        <div class="beat" id="cymbal"></div>
-        <div class="beat" id="clap"></div>
+        <div class="beat"></div>
+        <div class="beat"></div>
+        <div class="beat"></div>
+        <div class="beat" ></div>
+        <div class="beat"></div>
+        <div class="beat"></div>
+        <div class="beat"></div>
+        <div class="beat"></div>
+        <div class="beat"></div>
     </div>
     <script src="app.js"></script>
 </body>
